# geo-seo-codex

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
docs/: RELEASE_CHECKLIST.md
examples/: audit-json.json  citability-report.md  crawler-report.md  domain-comparison.md  quick-snapshot.md
geo_seo/: __init__.py  __main__.py
references/: commands.md  scoring.md
scripts/: __init__.py  brand_scanner.py  crm_dashboard.py  generate_pdf_report.py  geo_cli.py  verify_public_release.py
tests/: test_geo_cli.py
